[metadata]
name = yatq
version = 0.0.6

[options]
packages = find:
install_requires =
    aioredis >= 1.2.0;python_version<'3.11'
    redis >= 4.5.5;python_version>='3.11'

[options.package_data]
* = py.typed

[options.entry_points]
console_scripts =
    yatq-worker = yatq.worker.cli:run_worker_cli
